@@ -270,7 +270,7 @@ public class CCheckBox extends JCheckBox implements CEditor {
 	public Object getValue() {
 		if (m_value instanceof String)
 			return super.isSelected() ? "Y" : "N";
-		return new Boolean(isSelected());
+		return Boolean.valueOf(isSelected());
 	} // getValue
 
 	/**
